ya tenemos la grilla, estamo utilizando jquery, se corrigio el error de noReservechMatch

--- a/misitio/clases/source/table.html
+++ b/misitio/clases/source/table.html
@@ -20,7 +20,17 @@
     			</tr>
     		</thead>
     		<tbody>
-    			
+    			<?php 
+    				$sql = 'SELECT * FROM course';
+    				$results = $dbh->query($sql);
+    				$rows = $results->fetchAll();
+
+    				foreach ($rows as $row) {
+    					echo '<tr id="'.$row['CourseNo'].'">';
+    					echo '<td class="crsDesc">'.$row['crsDesc'].'</td><td class="CrsUnits">'.$row['CrsUnits'].'</td>';
+    					echo '</tr>';
+    				}
+				?>
     		</tbody>
     	</table>
 
